--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,8 @@
-name: CI/CD - frontend-app
-
-on:
-  push:
-    branches: [ main, dev ]
-  pull_request:
-    branches: [ main, dev ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Node.js 20.x
         uses: actions/setup-node@v3
@@ -20,12 +10,13 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli@19.2.15
+
       - name: Install Dependencies
-        # npm ci will install exactly what's in package-lock.json
         run: npm ci
 
       - name: Audit Dependencies (optional)
-        # fails if vulnerabilities ≥ high
         run: npm audit --audit-level=high
 
       - name: Build for Production
