--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,22 @@
+name: CI/CD - frontend-app
+
+on:
+  push:
+    branches:
+      - main
+      - dev
+  pull_request:
+    branches:
+      - main
+      - dev
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
       - name: Set up Node.js 20.x
         uses: actions/setup-node@v3
@@ -10,14 +24,8 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli@19.2.15
-
       - name: Install Dependencies
         run: npm ci
 
-      - name: Audit Dependencies (optional)
-        run: npm audit --audit-level=high
-
       - name: Build for Production
-        run: ng build --configuration=production
+        run: npx ng build --configuration=production
