--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name test.indepthdev.com;
 
   location / {
     root /usr/share/nginx/html;
@@ -9,7 +9,7 @@ server {
   }
 
   location /api/ {
-    proxy_pass http://backend:8080;
+    proxy_pass http://backend:8008;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header Upgrade $http_upgrade;
